src/test/test.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-clientip-test
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 8080
  selector:
    app: springboot-clientip-test
