src/test/test.service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-clientip-test2
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  selector:
    app: springboot-clientip-test
